# fbx3d

./: Cargo.toml  README.md
src/: lib.rs  types.rs
src/tests/: mod.rs
testcases/: cube.fbx  multiples.fbx
