[package]
name = "fbx"
version = "0.1.0"
authors = ["Charles Hubain <github@haxelion.eu>"]
description = "fbx allow to parse and load FBX 3D model"
documentation = "https://docs.rs/fbx"
homepage = "https://github.com/haxelion/fbx"
repository = "https://github.com/haxelion/fbx"
license = "Apache-2.0"

[dependencies]
bytepack = "0.1.1"
flate2 = "0.2"
