[package]
name = "fbx3d"
version = "0.1.0"
authors = ["Charles Hubain <github@haxelion.eu>"]
description = "fbx3d allow to parse and load FBX 3D model"
documentation = "https://docs.rs/fbx3d"
homepage = "https://github.com/haxelion/fbx3d"
repository = "https://github.com/haxelion/fbx3d"
license = "Apache-2.0"

[dependencies]
bytepack = "0.1.1"
flate2 = "0.2"
